# FFXIVInCpp

./: .gitignore  .gitmodules  CMakeLists.txt
src/Generator/: Generator.csproj  Program.cs
src/Generator/Generator/: Generator.sln  Program.cs
src/Injector/: CMakeLists.txt  Injector.cpp
src/LandingPad/: CMakeLists.txt  LandingPad.cpp
src/Offsets/: API.hpp  CMakeLists.txt  Memory.cpp  Memory.hpp  Offsets.cpp  Offsets.hpp
src/Project/: CMakeLists.txt  Project.cpp
